[gd_scene load_steps=3 format=3 uid="uid://blr63onmgmp0m"]

[ext_resource type="Script" path="res://entities/talkable.gd" id="1_y2drh"]
[ext_resource type="Texture2D" uid="uid://d6htqs1n6yqb" path="res://assets/Hinktiles.png" id="2_em8fo"]

[node name="Talkable" type="Area2D"]
script = ExtResource("1_y2drh")

[node name="SpeechBubble" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("2_em8fo")
offset = Vector2(2.08165e-12, 2.08165e-12)
region_enabled = true
region_rect = Rect2(16, 2.08165e-12, 16, 16)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
